src/objects/Reference__c.object
<CustomObject>
    <description>This contain Address, Geo Code, Picklist Value, Picklist Code</description>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <externalId>true</externalId>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Code__c</fullName>
        <externalId>true</externalId>
        <label>Name Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Code__c</fullName>
        <label>Parent Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Reference__c</referenceTo>
        <relationshipName>Picklist_Codes_Transformation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_CodeID__c</fullName>
        <externalId>true</externalId>
        <label>Type_CodeID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Geo</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Field__c</columns>
        <columns>Parent__c</columns>
        <columns>Name_Code__c</columns>
        <columns>Parent_Code__c</columns>
        <columns>Block__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Geographic_Entities</fullName>
        <columns>Field__c</columns>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Geo</value>
        </filters>
        <filters>
            <field>Field__c</field>
            <operation>equals</operation>
            <value>Province</value>
        </filters>
        <label>Geographic Entities</label>
    </listViews>
    <listViews>
        <fullName>Streets</fullName>
        <columns>Field__c</columns>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Geo</value>
        </filters>
        <filters>
            <field>Field__c</field>
            <operation>equals</operation>
            <value>Street</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>BLOCK 20</value>
        </filters>
        <label>Streets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>